use Gio for file system based device sync (allows mtp:// urls)

--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -801,6 +801,14 @@
                     <property name="draw-indicator">True</property>
                   </object>
                 </child>
+                <child>
+                  <object class="GtkCheckButton" id="checkbutton_delete_deleted_episodes">
+                    <property name="label" translatable="yes">Remove episodes deleted in gPodder from device</property>
+                    <property name="visible">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="draw-indicator">True</property>
+                  </object>
+                </child>
               </object>
               <packing>
                 <property name="tab-label" translatable="yes">Devices</property>
