--- a/share/gpodder/ui/adaptive/gpodderpodcastdirectory.ui
+++ b/share/gpodder/ui/adaptive/gpodderpodcastdirectory.ui
@@ -2,10 +2,10 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
+  <requires lib="libhandy" version="1.2"/>
   <object class="GtkWindow" id="gPodderPodcastDirectory">
     <property name="can-focus">False</property>
     <property name="border-width">6</property>
-    <property name="title" translatable="yes">Find new podcasts</property>
     <property name="modal">True</property>
     <property name="window-position">center-on-parent</property>
     <property name="default-width">600</property>
@@ -18,35 +18,12 @@
         <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
-          <object class="GtkPaned" id="hpaned">
+          <object class="HdyFlap" id="directory_flap">
             <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <child>
-              <object class="GtkScrolledWindow" id="sw_providers">
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="hscrollbar-policy">never</property>
-                <property name="shadow-type">in</property>
-                <child>
-                  <object class="GtkTreeView" id="tv_providers">
-                    <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="headers-visible">False</property>
-                    <property name="enable-search">False</property>
-                    <signal name="cursor-changed" handler="on_tv_providers_cursor_changed" swapped="no"/>
-                    <signal name="row-activated" handler="on_tv_providers_row_activated" swapped="no"/>
-                    <child internal-child="selection">
-                      <object class="GtkTreeSelection"/>
-                    </child>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="resize">False</property>
-                <property name="shrink">True</property>
-              </packing>
-            </child>
-            <child>
+            <property name="can-focus">False</property>
+            <property name="vexpand">True</property>
+            <property name="flap-position">end</property>
+            <child type="content">
               <object class="GtkBox" id="vb_podcasts">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
@@ -127,6 +104,7 @@
                     <property name="shadow-type">in</property>
                     <child>
                       <object class="GtkTreeView" id="tv_podcasts">
+                        <property name="width-request">300</property>
                         <property name="visible">True</property>
                         <property name="can-focus">True</property>
                         <property name="headers-visible">False</property>
@@ -143,16 +121,36 @@
                   </packing>
                 </child>
               </object>
-              <packing>
-                <property name="resize">True</property>
-                <property name="shrink">True</property>
-              </packing>
+            </child>
+            <child type="separator">
+              <placeholder/>
+            </child>
+            <child type="flap">
+              <object class="GtkScrolledWindow" id="sw_providers">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="hscrollbar-policy">never</property>
+                <property name="shadow-type">in</property>
+                <child>
+                  <object class="GtkTreeView" id="tv_providers">
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="headers-visible">False</property>
+                    <property name="enable-search">False</property>
+                    <signal name="cursor-changed" handler="on_tv_providers_cursor_changed" swapped="no"/>
+                    <signal name="row-activated" handler="on_tv_providers_row_activated" swapped="no"/>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection"/>
+                    </child>
+                  </object>
+                </child>
+              </object>
             </child>
           </object>
           <packing>
             <property name="expand">True</property>
             <property name="fill">True</property>
-            <property name="position">0</property>
+            <property name="position">1</property>
           </packing>
         </child>
         <child>
@@ -182,7 +180,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="position">0</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                     <child>
@@ -197,7 +195,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="position">1</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                   </object>
@@ -253,7 +251,35 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="position">1</property>
+            <property name="position">2</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+    <child type="titlebar">
+      <object class="HdyHeaderBar">
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="title" translatable="yes">Find new podcasts</property>
+        <property name="has-subtitle">False</property>
+        <property name="show-close-button">True</property>
+        <child>
+          <object class="GtkToggleButton" id="providers_show">
+            <property name="visible">True</property>
+            <property name="sensitive" bind-source="directory_flap" bind-property="folded" bind-flags="sync-create">False</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="active" bind-source="directory_flap" bind-property="reveal-flap" bind-flags="sync-create">False</property>
+            <signal name="toggled" handler="on_providers_show_toggled" swapped="no"/>
+            <child>
+              <object class="GtkImage" id="flap_show_image">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="pack-type">end</property>
           </packing>
         </child>
       </object>
