Add option to require control click to sort episodes.
This avoids accidental sorting when trying to select the top episode.

Requested by Fourhundred Thecat on mailing list, but is also an issue
I've run into many times.

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -209,6 +209,10 @@
           <attribute name="action">win.viewAlwaysShowNewEpisodes</attribute>
           <attribute name="label" translatable="yes">Always show New Episodes</attribute>
         </item>
+        <item>
+          <attribute name="action">win.viewCtrlClickToSortEpisodes</attribute>
+          <attribute name="label" translatable="yes">Require control click to sort episodes</attribute>
+        </item>
       </section>
       <submenu id="menuViewColumns">
         <attribute name="label" translatable="yes">Visible columns</attribute>
