adaptive/gpodderpreferences.ui: Save with glade 3.38.2

--- a/share/gpodder/ui/adaptive/gpodderpreferences.ui
+++ b/share/gpodder/ui/adaptive/gpodderpreferences.ui
@@ -563,11 +563,12 @@
                     </child>
                     <child>
                       <object class="GtkSeparator" id="hseparator_updating3">
-                        <property name="orientation">horizontal</property>
                         <property name="visible">True</property>
+                        <property name="can-focus">False</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
+                        <property name="fill">True</property>
                         <property name="position">8</property>
                       </packing>
                     </child>
@@ -575,9 +576,13 @@
                       <object class="GtkCheckButton" id="checkbutton_check_connection">
                         <property name="label" translatable="yes">Check connection before updating (if supported)</property>
                         <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="receives-default">False</property>
+                        <property name="draw-indicator">False</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
+                        <property name="fill">True</property>
                         <property name="position">9</property>
                       </packing>
                     </child>
