Remove new_episodes_forward button from episodeselector

--- a/share/gpodder/ui/adaptive/gpodderepisodeselector.ui
+++ b/share/gpodder/ui/adaptive/gpodderepisodeselector.ui
@@ -22,26 +22,6 @@
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="title" translatable="yes">Select episodes</property>
-                <child>
-                  <object class="GtkButton" id="new_episodes_forward">
-                    <property name="visible">True</property>
-                    <property name="sensitive">False</property>
-                    <property name="can-focus">True</property>
-                    <property name="receives-default">False</property>
-                    <signal name="clicked" handler="on_new_episodes_forward_clicked" swapped="no"/>
-                    <child>
-                      <object class="GtkImage">
-                        <property name="visible">True</property>
-                        <property name="can-focus">False</property>
-                        <property name="icon-name">go-next-symbolic</property>
-                      </object>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="pack-type">end</property>
-                    <property name="position">1</property>
-                  </packing>
-                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -79,6 +59,9 @@
                     <property name="show-expanders">False</property>
                     <property name="activate-on-single-click">True</property>
                     <signal name="row-activated" handler="on_row_activated" swapped="no"/>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection"/>
+                    </child>
                   </object>
                 </child>
               </object>
