gpodder.ui: Replace stock-ids with standard icon names

--- a/share/gpodder/ui/gtk/gpodder.ui
+++ b/share/gpodder/ui/gtk/gpodder.ui
@@ -37,7 +37,7 @@
                 <property name="is-important">True</property>
                 <property name="label" translatable="yes">Download</property>
                 <property name="use-underline">True</property>
-                <property name="stock-id">gtk-go-down</property>
+                <property name="icon-name">go-down</property>
                 <signal name="clicked" handler="on_download_selected_episodes" swapped="no"/>
               </object>
               <packing>
@@ -51,7 +51,8 @@
                 <property name="sensitive">False</property>
                 <property name="can-focus">False</property>
                 <property name="is-important">True</property>
-                <property name="stock-id">gtk-media-play</property>
+                <property name="label" translatable="yes">Play</property>
+                <property name="icon-name">media-playback-start</property>
                 <signal name="clicked" handler="on_playback_selected_episodes" swapped="no"/>
               </object>
               <packing>
@@ -67,7 +68,7 @@
                 <property name="is-important">True</property>
                 <property name="label" translatable="yes">Cancel</property>
                 <property name="use-underline">True</property>
-                <property name="stock-id">gtk-cancel</property>
+                <property name="icon-name">gtk-cancel</property>
                 <signal name="clicked" handler="on_item_cancel_download_activate" swapped="no"/>
               </object>
               <packing>
@@ -91,7 +92,7 @@
                 <property name="can-focus">False</property>
                 <property name="action-name">app.preferences</property>
                 <property name="label" translatable="yes">Preferences</property>
-                <property name="stock-id">gtk-preferences</property>
+                <property name="icon-name">gtk-preferences</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -113,7 +114,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Quit</property>
-                <property name="stock-id">gtk-quit</property>
+                <property name="icon-name">gtk-quit</property>
                 <signal name="clicked" handler="on_gPodder_delete_event" swapped="no"/>
               </object>
               <packing>
@@ -192,7 +193,7 @@
                                 <property name="visible">True</property>
                                 <property name="can-focus">True</property>
                                 <property name="hexpand">True</property>
-                                <property name="secondary-icon-stock">gtk-close</property>
+                                <property name="secondary-icon-name">gtk-close</property>
                               </object>
                               <packing>
                                 <property name="left-attach">0</property>
@@ -276,7 +277,7 @@
                                       <object class="GtkImage" id="image3209">
                                         <property name="visible">True</property>
                                         <property name="can-focus">False</property>
-                                        <property name="stock">gtk-cancel</property>
+                                        <property name="icon-name">gtk-cancel</property>
                                       </object>
                                     </child>
                                   </object>
@@ -423,7 +424,7 @@
                                 <property name="visible">True</property>
                                 <property name="can-focus">True</property>
                                 <property name="hexpand">True</property>
-                                <property name="secondary-icon-stock">gtk-close</property>
+                                <property name="secondary-icon-name">gtk-close</property>
                               </object>
                               <packing>
                                 <property name="left-attach">1</property>
