--- a/share/gpodder/ui/gtk/gpodderwelcome.ui
+++ b/share/gpodder/ui/gtk/gpodderwelcome.ui
@@ -22,11 +22,10 @@
             <property name="layout-style">end</property>
             <child>
               <object class="GtkButton" id="btnCancel">
-                <property name="label">gtk-cancel</property>
+                <property name="label" translatable="yes">Cancel</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="receives-default">False</property>
-                <property name="use-stock">True</property>
                 <signal name="clicked" handler="on_btnCancel_clicked" swapped="no"/>
               </object>
               <packing>
