--- a/share/gpodder/ui/gtk/gpodderaddpodcast.ui
+++ b/share/gpodder/ui/gtk/gpodderaddpodcast.ui
@@ -1,92 +1,113 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.38.2 -->
 <!--*- mode: xml -*-->
 <interface>
+  <requires lib="gtk+" version="3.16"/>
   <object class="GtkDialog" id="gPodderAddPodcast">
+    <property name="can-focus">False</property>
     <property name="title" translatable="yes">Add a new podcast</property>
-    <property name="type_hint">dialog</property>
     <property name="modal">True</property>
-    <property name="transient-for">parent_widget</property>
-    <property name="default_width">400</property>
+    <property name="default-width">400</property>
+    <property name="type-hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="vboxmain">
+        <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="hbuttonbox">
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+          <object class="GtkButtonBox" id="hbuttonbox">
+            <property name="can-focus">False</property>
+            <property name="layout-style">end</property>
             <child>
               <object class="GtkButton" id="btn_close">
-                <property name="visible">True</property>
                 <property name="label">gtk-cancel</property>
-                <property name="use_stock">True</property>
-                <signal handler="on_btn_close_clicked" name="clicked"/>
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="receives-default">False</property>
+                <property name="use-stock">True</property>
+                <signal name="clicked" handler="on_btn_close_clicked" swapped="no"/>
               </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
               <object class="GtkButton" id="btn_add">
-                <property name="visible">True</property>
                 <property name="label">gtk-add</property>
-                <property name="sensitive">false</property>
-                <property name="use_stock">True</property>
-                <signal handler="on_btn_add_clicked" name="clicked"/>
+                <property name="visible">True</property>
+                <property name="sensitive">False</property>
+                <property name="can-focus">False</property>
+                <property name="receives-default">False</property>
+                <property name="use-stock">True</property>
+                <signal name="clicked" handler="on_btn_add_clicked" swapped="no"/>
               </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
             </child>
           </object>
           <packing>
-            <property name="padding">0</property>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack-type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkBox" id="hboxurlentry">
-            <property name="border_width">10</property>
             <property name="visible">True</property>
-            <property name="homogeneous">False</property>
+            <property name="can-focus">False</property>
+            <property name="border-width">10</property>
             <property name="spacing">5</property>
-            <property name="orientation">horizontal</property>
             <child>
               <object class="GtkLabel" id="label_add">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes">URL:</property>
               </object>
               <packing>
-                <property name="padding">0</property>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
+                <property name="position">0</property>
               </packing>
             </child>
             <child>
               <object class="GtkEntry" id="entry_url">
                 <property name="visible">True</property>
-                <property name="has_focus">True</property>
-                <property name="activates_default">True</property>
-                <signal handler="on_entry_url_changed" name="changed"/>
+                <property name="can-focus">False</property>
+                <property name="has-focus">True</property>
+                <property name="activates-default">True</property>
+                <signal name="changed" handler="on_entry_url_changed" swapped="no"/>
               </object>
               <packing>
-                <property name="padding">0</property>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
               <object class="GtkButton" id="btn_paste">
                 <property name="label">gtk-paste</property>
-                <property name="use_stock">True</property>
                 <property name="visible">True</property>
-                <signal handler="on_btn_paste_clicked" name="clicked"/>
+                <property name="can-focus">False</property>
+                <property name="receives-default">False</property>
+                <property name="use-stock">True</property>
+                <signal name="clicked" handler="on_btn_paste_clicked" swapped="no"/>
               </object>
               <packing>
-                <property name="padding">0</property>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
           <packing>
-            <property name="padding">0</property>
             <property name="expand">False</property>
             <property name="fill">True</property>
+            <property name="position">1</property>
           </packing>
         </child>
       </object>
