--- a/share/gpodder/ui/gtk/gpodderconfigeditor.ui
+++ b/share/gpodder/ui/gtk/gpodderconfigeditor.ui
@@ -123,13 +123,12 @@
             <property name="layout-style">end</property>
             <child>
               <object class="GtkButton" id="btnClose">
-                <property name="label">gtk-close</property>
+                <property name="label" translatable="yes">Close</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="can-default">True</property>
                 <property name="has-default">True</property>
                 <property name="receives-default">False</property>
-                <property name="use-stock">True</property>
                 <signal name="clicked" handler="on_btnClose_clicked" swapped="no"/>
               </object>
               <packing>
