gpodderconfigeditor.ui: Replace GtkHButtonBox with GtkButtonBox

--- a/share/gpodder/ui/gtk/gpodderconfigeditor.ui
+++ b/share/gpodder/ui/gtk/gpodderconfigeditor.ui
@@ -117,7 +117,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkHButtonBox" id="hbuttonbox2">
+          <object class="GtkButtonBox" id="hbuttonbox2">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="layout-style">end</property>
