Gtk UI: Move refresh progress bar into the header bar

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -44,6 +44,10 @@
           <attribute name="accel">&lt;Primary&gt;r</attribute>
         </item>
         <item>
+          <attribute name="action">win.cancelFeedUpdate</attribute>
+          <attribute name="label" translatable="yes">Cancel check for new episodes</attribute>
+        </item>
+        <item>
           <attribute name="action">win.downloadAllNew</attribute>
           <attribute name="label" translatable="yes">Download new episodes</attribute>
           <attribute name="accel">&lt;Primary&gt;n</attribute>
