gpodderpreferences.ui: Use correct named icons

--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -129,7 +129,7 @@
                           <object class="GtkImage" id="image4">
                             <property name="visible">True</property>
                             <property name="can-focus">False</property>
-                            <property name="icon-name">gtk-edit</property>
+                            <property name="icon-name">edit</property>
                           </object>
                         </child>
                       </object>
@@ -172,7 +172,7 @@
                           <object class="GtkImage" id="image3">
                             <property name="visible">True</property>
                             <property name="can-focus">False</property>
-                            <property name="icon-name">gtk-edit</property>
+                            <property name="icon-name">edit</property>
                           </object>
                         </child>
                       </object>
