--- a/share/gpodder/ui/gtk/gpodderpodcastdirectory.ui
+++ b/share/gpodder/ui/gtk/gpodderpodcastdirectory.ui
@@ -172,7 +172,7 @@
                     <property name="layout-style">start</property>
                     <child>
                       <object class="GtkButton" id="btnSelectAll">
-                        <property name="label" translatable="yes">Select All</property>
+                        <property name="label" translatable="yes">Select _all</property>
                         <property name="visible">True</property>
                         <property name="can-focus">True</property>
                         <property name="receives-default">False</property>
@@ -187,7 +187,7 @@
                     </child>
                     <child>
                       <object class="GtkButton" id="btnSelectNone">
-                        <property name="label" translatable="yes">Select None</property>
+                        <property name="label" translatable="yes">Select _none</property>
                         <property name="visible">True</property>
                         <property name="can-focus">True</property>
                         <property name="receives-default">False</property>
@@ -215,12 +215,13 @@
                     <property name="layout-style">end</property>
                     <child>
                       <object class="GtkButton" id="btnCancel">
-                        <property name="label" translatable="yes">Cancel</property>
+                        <property name="label" translatable="yes">_Cancel</property>
                         <property name="visible">True</property>
                         <property name="can-focus">True</property>
                         <property name="can-default">True</property>
                         <property name="has-default">True</property>
                         <property name="receives-default">False</property>
+                        <property name="use-underline">True</property>
                         <signal name="clicked" handler="on_btnCancel_clicked" swapped="no"/>
                       </object>
                       <packing>
