--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -100,7 +100,7 @@
         </item>
       </section>
     </submenu>
-    <submenu id="menuChannels">
+    <submenu id="menuEpisodes">
       <attribute name="label" translatable="yes">_Episodes</attribute>
       <section>
         <item>
